Fix navbar z-index

--- a/gzWeb/Content/Styles/_app/header.css
+++ b/gzWeb/Content/Styles/_app/header.css
@@ -17,7 +17,7 @@ header {
     -webkit-box-shadow: none;
     -ms-box-shadow: none;
     box-shadow: none;
-    z-index: 999999;
+    z-index: 1004;
 }
 
 /*.navbar.navbar-default.navbar-initial{
